@@ -19,7 +19,6 @@ import java.time.Duration;
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
@@ -232,7 +231,7 @@ public class ModelTestCaseUtil {
             if (modelNeedsFlatten) {
                 serializedNames = ClientModelUtil.splitFlattenedSerializedName(serializedName);
             } else {
-                serializedNames = Collections.singletonList(serializedName);
+                serializedNames = List.of(serializedName);
             }
             addToJsonObject(jsonObject, serializedNames, value);
         }
